# bloat-radar

./: .gitignore  LICENSE  README.md  pyproject.toml
bloat_radar/: __init__.py  alternatives.py  cli.py  npm_scanner.py  pip_scanner.py  reporter.py  treemap.py
